<resources>

    <string name="app_name">Remote Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">Remote Control</string>
    <string name="btnConnect">Connect</string>
    <string name="textInfoInit">No info</string>
    <string name="click">Search</string>
    <string name="bluetoothSwitch">Bluetooth</string>
    <string name="done">Done</string>
    <string name="noneFound">None found</string>
    <string name="allDevices">TOM</string>
    <string name="btnPair">Pair</string>
    <string name="btnSendMS">Start MS</string>
    <string name="btnStopMS">Stop MS</string>
    <string name="btnChoose">Choose</string>
    <string name="yCoor">Y</string>
    <string name="xCoor">X</string>
    <string name="zCoor">Z</string>
    <string name="btON">BT ON</string>
    <string name="btOFF">BT OFF</string>
     
    <string name="title_activity_main">MainActivity</string>
	<string name="btnStartLog">Start Log</string>
	<string name="btnStopLog">Stop Log</string>
	<string name="Accelerometer">Accelerometer</string>
	<string name="Proximity">Proximity</string>
	<string name="back">Back to Main Menu</string>
	<string name="Accelerometerdata">Accelerometerdata</string>
	<string name="Proximitydata">Proximitydata</string>
	<string name="Remotecontrol">Remote Control</string>
	<string name="Brain">Brain</string>
	<string name="ADK">ADK</string>
	<string name="Ultrasound">Ultrasound</string>
	<string name="labelInfo">Info:</string>
	<string name="lableMessage">Received messages:</string>
	<string name="textMessageInit">No messages</string>
	<string name="btnToggleBtON">BT ON</string>
	<string name="btnToggleBtOFF">BT OFF</string>
	<string name="algoritm">Algorithm:</string>
	<string name="brainAcc">Brain - Accelerometer</string>
	<string name="adkUltrasound">ADK - Ultrasound</string>
	<string name="remoteAcc">Remote - Accelerometer</string>
	<string name="logSensors">Log sensors:</string>
	<string name="linearAlgoritm">Linear Algorithm</string>
	<string name="exponentialAlgoritm">Exponential Algorithm</string>
	<string name="logarithmicAlgoritm">Logarithmic Algorithm</string>
	<string name="settings">Settings</string>

</resources>